--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -36,6 +36,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Base\Input.cs" />
+    <Compile Include="Entities\Base\Animation.cs" />
+    <Compile Include="Entities\Base\Entity.cs" />
+    <Compile Include="Entities\Characters\MainCharacter.cs" />
     <Compile Include="External\Tiled\Layer.cs" />
     <Compile Include="External\Tiled\Map.cs" />
     <Compile Include="External\Tiled\MapLoader.cs" />
