INT: Basic input class

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -35,6 +35,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Base\Input.cs" />
     <Compile Include="External\Tiled\Layer.cs" />
     <Compile Include="External\Tiled\Map.cs" />
     <Compile Include="External\Tiled\MapLoader.cs" />
