FIX: Fixed Xbox controller support.

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -83,6 +83,9 @@
     <Content Include="lib\x64\opengl32.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="lib\x64\SDL.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="lib\x64\wrap_oal.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -90,6 +93,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="lib\x86\opengl32.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="lib\x86\SDL.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="lib\x86\wrap_oal.dll">
