--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -43,11 +43,13 @@
     <Compile Include="Entities\Base\EntityUpdateBehavior.cs" />
     <Compile Include="Entities\Behaviors\InputWalkBehavior.cs" />
     <Compile Include="Entities\Characters\MainCharacter.cs" />
-    <Compile Include="External\Tiled\Layer.cs" />
-    <Compile Include="External\Tiled\Map.cs" />
-    <Compile Include="External\Tiled\MapLoader.cs" />
-    <Compile Include="External\Tiled\Tile.cs" />
-    <Compile Include="External\Tiled\Tileset.cs" />
+    <Compile Include="Levels\Level.cs" />
+    <Compile Include="Levels\LevelCollection.cs" />
+    <Compile Include="Levels\Mapping\Layer.cs" />
+    <Compile Include="Levels\Mapping\Map.cs" />
+    <Compile Include="Levels\Mapping\MapLoader.cs" />
+    <Compile Include="Levels\Mapping\Tile.cs" />
+    <Compile Include="Levels\Mapping\Tileset.cs" />
     <Compile Include="GameMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -96,7 +98,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="External\Tiled\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Content\maps\Overworld01.tmx">
       <SubType>Designer</SubType>
