--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -43,9 +43,11 @@
     <Compile Include="Entities\Base\EntityUpdateBehavior.cs" />
     <Compile Include="Entities\Behaviors\WalkBehavior.cs" />
     <Compile Include="Entities\Behaviors\FollowBehavior.cs" />
-    <Compile Include="Entities\Behaviors\InputWalkBehavior.cs" />
+    <Compile Include="Entities\Behaviors\InputBehavior.cs" />
     <Compile Include="Entities\Characters\Enemy1.cs" />
     <Compile Include="Entities\Characters\MainCharacter.cs" />
+    <Compile Include="Entities\Weapons\Weapon.cs" />
+    <Compile Include="Entities\Weapons\Sword.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Levels\LevelCollection.cs" />
     <Compile Include="Levels\Mapping\Layer.cs" />
@@ -79,6 +81,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\sprites\MainCharacter.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\sprites\Sword.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\tiles\dungeon_01.png">
