--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Entities\Behaviors\FollowBehavior.cs" />
     <Compile Include="Entities\Behaviors\InputBehavior.cs" />
     <Compile Include="Entities\Characters\Enemy1.cs" />
-    <Compile Include="Entities\Characters\MainCharacter.cs" />
+    <Compile Include="Entities\Characters\Player.cs" />
     <Compile Include="Entities\Weapons\Weapon.cs" />
     <Compile Include="Entities\Weapons\Sword.cs" />
     <Compile Include="Levels\Level.cs" />
