INT: Sword collision detection.

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Base\Input.cs" />
+    <Compile Include="Base\VectorHelper.cs" />
     <Compile Include="Entities\Base\Animation.cs" />
     <Compile Include="Entities\Base\Frame.cs" />
     <Compile Include="Base\GameContent.cs" />
