--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -49,8 +49,9 @@
     <Compile Include="Entities\Characters\Player.cs" />
     <Compile Include="Entities\Weapons\IWeapon.cs" />
     <Compile Include="Entities\Weapons\Sword.cs" />
-    <Compile Include="GUI\Components\Component.cs" />
-    <Compile Include="GUI\Components\MenuItem.cs" />
+    <Compile Include="GUI\Components\ComponentList.cs" />
+    <Compile Include="GUI\Components\Base\Component.cs" />
+    <Compile Include="GUI\Components\Button.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Levels\LevelCollection.cs" />
     <Compile Include="Levels\Mapping\Layer.cs" />
@@ -61,7 +62,7 @@
     <Compile Include="GameMain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screens\TitleScreen.cs" />
+    <Compile Include="GUI\Screens\TitleScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
@@ -171,9 +172,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\fonts\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Content\maps\Overworld01.tmx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -191,6 +190,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\maps\Overworld06.tmx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\fonts\GearInfoFont.xnb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
