--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Entities\Base\Entity.cs" />
     <Compile Include="Entities\Base\EntityUpdateBehavior.cs" />
     <Compile Include="Entities\Behaviors\BlinkBehavior.cs" />
+    <Compile Include="Entities\Base\EntityRelativePosition.cs" />
+    <Compile Include="Entities\Behaviors\SwordAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\WalkBehavior.cs" />
     <Compile Include="Entities\Behaviors\FollowBehavior.cs" />
     <Compile Include="Entities\Behaviors\InputBehavior.cs" />
