--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -59,6 +59,7 @@
     <Compile Include="GUI\Components\ComponentList.cs" />
     <Compile Include="GUI\Components\Base\Component.cs" />
     <Compile Include="GUI\Components\Button.cs" />
+    <Compile Include="GUI\Screens\GameOverScreen.cs" />
     <Compile Include="GUI\Screens\CreditsScreen.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Levels\LevelCollection.cs" />
@@ -90,6 +91,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\gameover.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\images\menuselected.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
