FET: #12 - Create BGM/SE class. Created class and tested with both BGM and SE. Created an (Unused) SoundReference class, that may be deleted if nobody finds an use for it.

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Base\Input.cs" />
     <Compile Include="Base\SoundManager.cs" />
+    <Compile Include="Base\SoundReference.cs" />
     <Compile Include="Base\VectorHelper.cs" />
     <Compile Include="Entities\Base\Animation.cs" />
     <Compile Include="Entities\Base\Frame.cs" />
@@ -129,6 +130,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\licenses\music.txt" />
+    <Content Include="Content\sound\select.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\sprites\Brendan.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
