--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -46,12 +46,14 @@
     <Compile Include="Entities\Base\EntityUpdateBehavior.cs" />
     <Compile Include="Entities\Behaviors\BlinkBehavior.cs" />
     <Compile Include="Entities\Base\EntityRelativePosition.cs" />
+    <Compile Include="Entities\Behaviors\TouchAndDodgeBehavior.cs" />
     <Compile Include="Entities\Behaviors\HitOnTouchBehavior.cs" />
     <Compile Include="Entities\Behaviors\WalkAroundBehavior.cs" />
     <Compile Include="Entities\Behaviors\SwordAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\WalkBehavior.cs" />
     <Compile Include="Entities\Behaviors\FollowBehavior.cs" />
     <Compile Include="Entities\Behaviors\InputBehavior.cs" />
+    <Compile Include="Entities\Characters\Bat.cs" />
     <Compile Include="Entities\Characters\Skeleton.cs" />
     <Compile Include="Entities\Characters\Zombie.cs" />
     <Compile Include="Entities\Characters\Slime.cs" />
