WIP: Started working on #16, but had some problems with the storage class. Added functionality initial idea.

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Base\Input.cs" />
+    <Compile Include="Base\OptionsManager.cs" />
     <Compile Include="Base\SoundManager.cs" />
     <Compile Include="Base\SoundReference.cs" />
     <Compile Include="Base\VectorHelper.cs" />
