WIP: #24 - Created new character: Goon.
Simplified MapLoader.

Bow attack behavior is not done yet.

--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entities\Behaviors\FollowBehavior.cs" />
     <Compile Include="Entities\Behaviors\InputBehavior.cs" />
     <Compile Include="Entities\Characters\Bat.cs" />
+    <Compile Include="Entities\Characters\Goon.cs" />
     <Compile Include="Entities\Characters\Skeleton.cs" />
     <Compile Include="Entities\Characters\Zombie.cs" />
     <Compile Include="Entities\Characters\Slime.cs" />
