--- a/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
+++ b/src/QuestForTheCrown2/QuestForTheCrown2/QuestForTheCrown2.csproj
@@ -76,6 +76,7 @@
     <Compile Include="GUI\Components\Base\Component.cs" />
     <Compile Include="GUI\Components\Button.cs" />
     <Compile Include="GUI\Components\GameGUI.cs" />
+    <Compile Include="GUI\Components\SelectionBox.cs" />
     <Compile Include="GUI\Screens\GameOverScreen.cs" />
     <Compile Include="GUI\Screens\CreditsScreen.cs" />
     <Compile Include="Levels\Level.cs" />
